504: Fix spacing of buttons on the init screen
- Made the spacing of buttons even on the init screen
- Moved style tags for the init page buttons from init-screen.html to classes in app.css.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -67,6 +67,38 @@ body {
     width: 100%;
 }
 
+.listInitApp {
+    display: none;
+    height: 56%;
+}
+
+.initScreenButtonDiv {
+    height: 15%;
+    margin: 3% auto;
+    text-align: center;
+    width: 90%;
+}
+
+.initScreenWhiteButton {
+    background-color: #F5F5F5;
+    font-size: x-large;
+    height: 100%;
+    position: relative;
+}
+
+.initScreenGreenButton {
+    background-color: #4CAF50;
+    font-size: xx-large;
+    font-weight: bolder;
+    height: 100%;
+}
+
+.initScreenButtonText {
+    color: #757575;
+    display: inline-block;
+    margin-left: -10%;
+}
+
 /* Portrait layout (default) */
 .app {
     background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
